FIX: line wrapping of logwatch entries

--- a/web/htdocs/logwatch.css
+++ b/web/htdocs/logwatch.css
@@ -176,4 +176,11 @@ Boston, MA 02110-1301 USA.
     border-bottom-style: none;
 }
 
+#logwatch p { 
+   white-space: pre-wrap;      /* CSS3 */   
+   white-space: -moz-pre-wrap; /* Firefox */    
+   white-space: -pre-wrap;     /* Opera <7 */   
+   white-space: -o-pre-wrap;   /* Opera 7 */    
+   word-wrap: break-word;      /* IE */
+}
 
